--- a/package.json
+++ b/package.json
@@ -8,22 +8,20 @@
     "start": "next start",
     "lint": "eslint"
   },
-  "dependencies": {
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.3",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5"
-  }
+ "dependencies": {
+  "cors": "^2.8.5",
+  "dotenv": "^17.2.2",
+  "express": "^5.1.0",
+  "firebase-admin": "^13.5.0",
+  "stripe": "^18.5.0",
+  "zod": "^4.1.11",
+  "@types/node": "^20.11.30"
+},
+"devDependencies": {
+  "@types/cors": "^2.8.19",
+  "@types/express": "^5.0.3",
+  "nodemon": "^3.1.10",
+  "ts-node": "^10.9.2",
+  "typescript": "^5.9.2"
+}
 }
