--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "start": "next start",
     "lint": "eslint"
   },
- "dependencies": {
-  "cors": "^2.8.5",
-  "dotenv": "^17.2.2",
-  "express": "^5.1.0",
-  "firebase-admin": "^13.5.0",
-  "stripe": "^18.5.0",
-  "zod": "^4.1.11",
-  "@types/node": "^20.11.30"
-},
-"devDependencies": {
-  "@types/cors": "^2.8.19",
-  "@types/express": "^5.0.3",
-  "nodemon": "^3.1.10",
-  "ts-node": "^10.9.2",
-  "typescript": "^5.9.2"
-}
+  "dependencies": {
+    "next": "^15.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.11.30",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.5.4",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.6.3"
+  }
 }
