--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "start": "next start",
     "lint": "eslint"
   },
-  "dependencies": {
-    "next": "^15.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "20.11.30",
-    "@types/react": "^18.3.24",
-    "@types/react-dom": "^18.3.7",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.5.4",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3"
-  }
+"dependencies": {
+  "next": "^15.5.3",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "tailwindcss": "^3.4.15",
+  "postcss": "^8.4.41",
+  "autoprefixer": "^10.4.21"
+},
+"devDependencies": {
+  "@types/node": "20.11.30",
+  "@types/react": "^18.3.24",
+  "@types/react-dom": "^18.3.7",
+  "@typescript-eslint/eslint-plugin": "^7.0.0",
+  "@typescript-eslint/parser": "^7.0.0",
+  "eslint": "^8.57.0",
+  "eslint-config-next": "^15.5.4",
+  "typescript": "^5.6.3"
+}
+
 }
