--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -16,16 +16,17 @@
       "@/*": ["./src/*"]
     },
     "plugins": [{ "name": "next" }],
-    "allowJs": true,
     "skipLibCheck": true,
-    "types": ["node"]               // ✅ fixes the Node type resolution
+    "types": ["node", "react", "react-dom"]
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
     "next.config.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    ".next"        // ✅ don’t type-check generated Next.js files
+  ]
 }
