--- a/package.json
+++ b/package.json
@@ -2,29 +2,32 @@
   "name": "events-frontend",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-"dependencies": {
-  "next": "^15.5.3",
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "tailwindcss": "^3.4.15",
-  "postcss": "^8.4.41",
-  "autoprefixer": "^10.4.21"
+"scripts": {
+  "predev": "kill-port 3000 || true",
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "eslint"
 },
-"devDependencies": {
-  "@types/node": "20.11.30",
-  "@types/react": "^18.3.24",
-  "@types/react-dom": "^18.3.7",
-  "@typescript-eslint/eslint-plugin": "^7.0.0",
-  "@typescript-eslint/parser": "^7.0.0",
-  "eslint": "^8.57.0",
-  "eslint-config-next": "^15.5.4",
-  "typescript": "^5.6.3"
-}
-
+  "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "next": "^15.5.3",
+    "postcss": "^8.4.41",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.15"
+  }
+,
+  "devDependencies": {
+    "@playwright/test": "^1.55.1",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.5.4",
+    "kill-port": "^2.0.1",
+    "typescript": "^5.6.3"
+  }
 }
