Playwright test suite added

--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
 "scripts": {
   "predev": "kill-port 3000 || true",
-  "dev": "next dev",
+  "dev": "next dev -p 3000",
   "build": "next build",
   "start": "next start",
-  "lint": "eslint"
-},
+  "lint": "eslint",
+  
+  "test:e2e": "NEXT_PUBLIC_API_BASE_URL=http://localhost:10000 playwright test",
+  
+  "test:e2e:ci": "BASE_URL=https://events-platform-frontend.netlify.app NEXT_PUBLIC_API_BASE_URL=https://events-platform-backend.onrender.com playwright test"
+}
+,
+
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "next": "^15.5.3",
@@ -16,11 +22,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.15"
-  }
-,
+  },
   "devDependencies": {
     "@playwright/test": "^1.55.1",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.19.17",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
