--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,15 +34,16 @@
     ],
     "allowJs": true
   },
-  "include": [
-    "next-env.d.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "next.config.ts",
-    "tests/**/*.ts"
-  ],
+ "include": [
+  "next-env.d.ts",
+  "src/**/*.ts",
+  "src/**/*.tsx",
+  "next.config.ts",
+  "tests/**/*.ts",
+  "playwright.config.ts"
+],
   "exclude": [
     "node_modules",
-    ".next" // ✅ don’t type-check generated Next.js files
+    ".next" // don’t type-check generated Next.js files
   ]
 }
